--- a/gleam.toml
+++ b/gleam.toml
@@ -26,6 +26,7 @@ gluid = ">= 1.0.0 and < 2.0.0"
 birl = ">= 1.7.1 and < 2.0.0"
 based_sqlite = ">= 3.0.0 and < 4.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
+antigone = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
