Some deployment changes

--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -1,2 +1,7 @@
 build:
 	gleam export erlang-shipment
+
+deploy:
+	sudo cp -r -f ../build/erlang-shipment/. /home/xtrakrispi/webapps/budget
+	sudo systemctl kill budget
+	sudo systemctl start budget
