Email is working, now working on reset password

--- a/gleam.toml
+++ b/gleam.toml
@@ -28,6 +28,9 @@ based_sqlite = ">= 3.0.0 and < 4.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
 antigone = ">= 1.1.0 and < 2.0.0"
 dot_env = ">= 1.0.0 and < 2.0.0"
+gen_smtp = ">= 1.2.0 and < 2.0.0"
+certifi = ">= 2.13.0 and < 3.0.0"
+tls_certificate_check = ">= 1.22.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
